--- a/index.html
+++ b/index.html
@@ -1,74 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Efrain Quispe Valero - Senior Software Developer - VML</title>
-    <link rel="stylesheet" href="./css/style.css"/>
-  </head>
-  <body>
-    <nav>
-      <div>
-      <img src="./images/logo-1.svg" width="35" height="40" alt=""/>
-      </div>
-      <div>
-        <ul class="nav-list">
-          <li>
-            <a href="#">Home</a>
-          </li>
-          <li>
-            <a href="#">Sobre mi</a>
-          </li>
-          <li>
-            <a href="#">Proyectos</a>
-          </li>
-          <li>
-            <a href="#">Hábilidades</a>
-          </li>
-          <li>
-            <a href="#">Carrera</a>
-          </li>
-          <li>
-            <a href="#">Recomendaciones</a>
-          </li>
-          <li>
-            <a href="#">Contacto</a>
-          </li>
-        </ul>
-      </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Efrian Quispe Valero - Senior software developer</title>
+    <link rel="stylesheet" href="./css/style.css">
+</head>
+<body>
+    <nav  class="align-center">
+       <div>
+        <img src="./images/logo-1.svg" width="35" height="40" alt="mi foto">
+       </div>
+       <div>
+         <ul class="nav-list">
+            <li>
+                <a href="#">Home</a>
+            </li>
+            <li>
+                <a href="#">Sobre mi</a>
+            </li>
+            <li>
+                <a href="#">Proyecto</a>
+            </li>
+            <li>
+                <a href="#">Habilidades</a>
+            </li>
+            <li>
+                <a href="#">Carrera</a>
+            </li>
+            <li>
+                <a href="#">contactos</a>
+            </li>
+         </ul>
+       </div>
     </nav>
     <main>
-      <div>
-        <span class="gretting">👋 Saludos!</span>
-        <h1 class="title">Efrain Quispe Valero</h1>
-        <p class="description">Senior Software Developer</p>
-        <div class="social-links">
-          <a href="">
-            <img src="./images/linkedin.svg" alt="" />
-          </a>
-          <a href="">
-            <img src="./images/github.svg" alt="" />
-          </a>
-          <a href="">
-            <img src="./images/behance.svg" alt="" />
-          </a>
+        <div>
+            <span class="gretting">saludos</span>
+            <h1 class="title">Efrain Quispe Valero</h1>
+            <p class="description">junior software developer</p>
+            <div class="social-links align-center">
+                <a href="">
+                    <img src="./images/Group_1.svg" alt="">
+                </a>
+                <a href="">
+                    <img src="./images/github_2.svg" alt="">
+                </a>
+                <a href="">
+                <img src="./images/behance.svg" alt="">
+                </a>
+            </div>
         </div>
-      </div>
-      <div class="container-profile">
-        <img 
-          src="./images/profile.jpg"
-          alt="Efrain Quispefo - foto de perfil"/>
-      </div>
-      <div classs="container-contact">
-          <a href="#">
-            Descargar CV
-            <img src="./images/download.svg" alt="">
-          </a>
-          <a href="">
-            <img src="./images/whatsapp.svg" alt=""/>
-            Vamos a conversar
-          </a>
-      </div>
+        <div class="container-profile">
+            <img 
+            src="./images/profile.jpg" 
+            alt="Efrain Quispe Valero - foto de perfil"/>
+        </div>
+        <div class="container-contact">  
+                <a href="#"  class="align-center"> 
+                    Descargar cv
+                    <img src="./images/download.svg" alt=""/>
+                </a>
+                <a href="#"  class="align-center">
+                    <img src="./images/whatsapp.svg" alt=""/>
+                    Vamos a conversar
+                </a>
+        </div>
     </main>
-  </body>
+</body>
 </html>
