--- a/index.html
+++ b/index.html
@@ -1,71 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Efrian Quispe Valero - Senior software developer</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-    <nav  class="align-center">
-       <div>
-        <img src="./images/logo-1.svg" width="35" height="40" alt="mi foto">
-       </div>
-       <div>
-         <ul class="nav-list">
-            <li>
-                <a href="#">Home</a>
-            </li>
-            <li>
-                <a href="#">Sobre mi</a>
-            </li>
-            <li>
-                <a href="#">Proyecto</a>
-            </li>
-            <li>
-                <a href="#">Habilidades</a>
-            </li>
-            <li>
-                <a href="#">Carrera</a>
-            </li>
-            <li>
-                <a href="#">contactos</a>
-            </li>
-         </ul>
-       </div>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,200&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <nav class="flex align-center">
+      <div>
+        <img src="./images/logo-1.svg" width="35" height="40" alt="mi foto" />
+      </div>
+      <div>
+        <ul class="nav-list flex">
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <a href="#">Sobre mi</a>
+          </li>
+          <li>
+            <a href="#">Proyecto</a>
+          </li>
+          <li>
+            <a href="#">Habilidades</a>
+          </li>
+          <li>
+            <a href="#">Carrera</a>
+          </li>
+          <li>
+            <a href="#">contactos</a>
+          </li>
+        </ul>
+      </div>
     </nav>
-    <main>
-        <div>
-            <span class="gretting">saludos</span>
-            <h1 class="title">Efrain Quispe Valero</h1>
-            <p class="description">junior software developer</p>
-            <div class="social-links align-center">
-                <a href="">
-                    <img src="./images/Group_1.svg" alt="">
-                </a>
-                <a href="">
-                    <img src="./images/github_2.svg" alt="">
-                </a>
-                <a href="">
-                <img src="./images/behance.svg" alt="">
-                </a>
-            </div>
+    <main class="flex align-center">
+      <div>
+        <span class="gretting">✌️saludos</span>
+        <h1 class="title">Efrain Quispe Valero</h1>
+        <p class="description">junior software developer</p>
+        <div class="social-links align-center">
+          <a href="">
+            <img src="./images/Group_1.svg" alt="" />
+          </a>
+          <a href="">
+            <img src="./images/github_2.svg" alt="" />
+          </a>
+          <a href="">
+            <img src="./images/behance.svg" alt="" />
+          </a>
         </div>
-        <div class="container-profile">
-            <img 
-            src="./images/profile.jpg" 
-            alt="Efrain Quispe Valero - foto de perfil"/>
-        </div>
-        <div class="container-contact">  
-                <a href="#"  class="align-center"> 
-                    Descargar cv
-                    <img src="./images/download.svg" alt=""/>
-                </a>
-                <a href="#"  class="align-center">
-                    <img src="./images/whatsapp.svg" alt=""/>
-                    Vamos a conversar
-                </a>
-        </div>
+      </div>
+      <div class="container-profile">
+        <img
+          src="./images/profile.jpg"
+          alt="Efrain Quispe Valero - foto de perfil"
+        />
+      </div>
+      <div class="container-contact">
+        <a href="#" class="align-center">
+          Descargar cv
+          <img src="./images/download.svg" alt="" />
+        </a>
+        <a href="#" class="align-center">
+          <img src="./images/whatsapp.svg" alt="" />
+          Vamos a conversar
+        </a>
+      </div>
     </main>
-</body>
+    <hr class="divider" />
+    <section>
+      <div class="container-cards">
+        <div>
+          <img src="./images/Code-icon.svg" alt="" />
+          <p>1 año desarrollando</p>
+          <h5>proyectos</h5>
+        </div>
+        <div>
+          <img src="./images/Project-icon.svg" alt="" />
+          <p>1 año desarrollando</p>
+          <h5>proyectos</h5>
+        </div>
+        <div>
+          <img src="./images/Design-icon.svg" alt="" />
+          <p>1 año desarrollando</p>
+          <h5>proyectos</h5>
+        </div>
+      </div>
+      <div>
+        <p>developer</p>
+        <p>Front-end</p>
+      </div>
+      <div>
+        <p>decenas de proyectos</p>
+        <p>experiencias</p>
+      </div>
+      <div>
+        <p>Designer Freelance</p>
+        <p>UI-UX</p>
+      </div>
+    </section>
+    <hr class="divider" />
+    <section class="container-about-me">
+      <div>
+        <img src="./images/profile2.jpg" alt="Efrain Quispe - foto perfil" />
+      </div>
+      <div>
+        <span class="gretting">😁sobre mi</span>
+        <h2 class="mt-20">Efrain Quispe Valero</h2>
+        <p class="mb-20">
+          👍 Me llamo Efrain Quispe Valero, pero me puedes llamar Ifra
+        </p>
+        <p>💻 soy ingeniero de redes y me especializo en desarrollo web</p>
+        <p>👨‍🎓 Graduado de la universidad UPC, especalizacion en Tecsup</p>
+        <p>
+          💡 desarrollo de paginas web Front-end and Back-en con React js, React
+          Native
+        </p>
+        <p class="mt-20">🚀 capacitacion constnte, 100% comprometido</p>
+      </div>
+    </section>
+  </body>
 </html>
