--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </a>
       </div>
     </main>
-    <hr class="divider" />
+    <!-- <hr class="divider" /> -->
     <section>
       <div class="container-cards">
         <div>
@@ -93,20 +93,22 @@
           <h5>proyectos</h5>
         </div>
       </div>
-      <div>
-        <p>developer</p>
-        <p>Front-end</p>
-      </div>
-      <div>
-        <p>decenas de proyectos</p>
-        <p>experiencias</p>
-      </div>
-      <div>
-        <p>Designer Freelance</p>
-        <p>UI-UX</p>
+      <div class="container-sumery"> 
+        <div class="container.info">
+          <p>developer</p>
+          <p>Front-end</p>
+        </div>
+        <div>
+          <p>decenas de proyectos</p>
+          <p>experiencias</p>
+        </div>
+        <div>
+          <p>Designer Freelance</p>
+          <p>UI-UX</p>
+        </div>
       </div>
     </section>
-    <hr class="divider" />
+    <!-- <hr class="divider" /> -->
     <section class="container-about-me">
       <div>
         <img src="./images/profile2.jpg" alt="Efrain Quispe - foto perfil" />
