--- a/Semana-2/tip-calculator.html
+++ b/Semana-2/tip-calculator.html
@@ -3,59 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tip-calculator</title>
+    <title>Reto2-Tip-calculator</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css">
 </head>
     <body>
      <main>
         <img src="./images/logo.svg" alt="">
         <form>
-             <div>
-                <div>
-                    <label for="input-bill">Bill</label>
-                </div>
-                <img src="./images/icon-dollar.svg" alt="">
-                <input id="input-bill" type="text" placeholder="0">
-             </div>
-            <div>
-                <p>select tip</p>
-                <div>
-                    <button>5%</button>
-                    <button>10%</button>
-                    <button>15%</button>
-                    <button>25%</button>
-                    <button>50%</button>
-                    <input type="text" placeholder="custom"/>
-                </div>
-            </div>
-            <div>
-                 <label for="input-person">number of people</label>
-                <div>
-                 <img src="./images/icon-person.svg" alt="">
-                 <input type="text" placeholder="0"/>
-                </div>
-            </div>
             <div>
                 <div>
-                    <div>
-                        <div>
-                            <p>Tip Amound</p>
-                            <span>/person</span>
-                        </div>
-                        <div>
-                            <p>$0.00</p>
-                        </div>
-                        <div>
-                            <p>Total</p>
-                            <span>/person</span>
-                        </div>
-                        <div>
-                            <p>$0.00</p>
-                        </div>
+                     <label for="input-bill" class="text-title">Bill</label>
+                    <div class="container-input">
+                     <img src="./images/icon-dollar.svg" alt="">
+                     <input id="input-bill" type="text" placeholder="0">
                     </div>
+                </div>
+                <div>
+                    <p class="text-title">select tip</p>
+                    <div class="container-percentage">
+                        <button>5%</button>
+                        <button>10%</button>
+                        <button>15%</button>
+                        <button>25%</button>
+                        <button>50%</button>
+                        <input type="text" placeholder="custom"/>
+                    </div>
+                </div>
+                <div>
+                 <label for="input-person" class="text-title">number of people</label>
+                    <div class="container-input">
+                        <img src="./images/icon-person.svg" alt="">
+                        <input type="text" placeholder="0"/>
+                    </div>
+                </div>
+            </div>
+                <div>
                     <div>
+                        <div>
+                            <div>
+                                <p>Tip Amound</p>
+                                <span>/person</span>
+                            </div>
+                            <div>
+                                <p>$0.00</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <p>Total</p>
+                                <span>/person</span>
+                            </div>
+                            <div>
+                                <p>$0.00</p>
+                            </div>
+                        </div>  
+                    </div>
                         <button>Reset</button>
-                    </div>
+                                
                 </div>
+                
             </div>
         </form>
      </main>
