--- a/Semana-3/sunnyside.html
+++ b/Semana-3/sunnyside.html
@@ -3,91 +3,62 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sunnyside challenge</title>
-
+    <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Zhi+Mang+Xing&display=swap"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <nav class="flex nav">
+    <nav class="nav">
       <div>
         <img src="./assets/logo.svg" alt="" />
       </div>
       <div>
         <div>
-          <button class="btn-menu">
-            <img src="./assets/icons/icon-hamburger.svg" alt="" />
-          </button>
+            <button class="btn-menu">
+             <img src="./assets/icons/icon-hamburger.svg" alt="" />
+            </button>
         </div>
         <div>
           <ul class="menu">
             <li>
-              <a href="">About</a>
+                <a href="">About</a>
             </li>
             <li>
-              <a href="">Services</a>
+                <a href="">Services</a>
             </li>
             <li>
-              <a href="">Projects</a>
+                <a href="">Projects</a>
             </li>
             <li>
-              <a href="">Contact</a>
+                <a href="">contact</a>
             </li>
+
           </ul>
         </div>
       </div>
     </nav>
-    <main class="bg-no-repeat bg-position-center bg-size-cover">
-      <h1>We are creatives</h1>
+    <main>
+      <h1>We are creative</h1>
       <img class="arrow-down" src="./assets/icons/icon-arrow-down.svg" alt="" />
     </main>
-    <section class="section-egg flex-reverse">
-      <div
-        class="bg-egg h-50 bg-no-repeat bg-position-center bg-size-cover"
-      ></div>
-      <div class="text-center container-egg h-50 flex">
-        <div>
-          <h2>Transform your brand</h2>
-          <p class="font-barlow">
-            We are a full-service create agency specializig in helping brands
-            grow fast.
-          </p>
-          <p class="font-barlow">
-            Engage your clients through compelling visuals that do most of the
-            marketing of you.
-          </p>
-          <a href="#" class="link">Learn more</a>
-        </div>
-      </div>
-    </section>
     <section class="section-egg">
-      <div
-        class="bg-cup bg-no-repeat bg-position-center bg-size-cover h-50"
-      ></div>
-      <div class="text-center container-egg h-50 flex">
-        <div>
-          <h2>Stand out to the right audience</h2>
-          <p class="font-barlow">
-            Using a collaborative formula of designers, researchers,
-            pnotographers, videograpners, and copywriters, well bulld and extend
-            your drand in digital places.
-          </p>
-          <a href="#" class="link">Learn more</a>
-        </div>
-      </div>
-    </section>
-    <section class="gb-cherry text-centerbg-no-repeat bg-position-center flex">
-      <div>
-        <h2>Graphic Design</h2>
+      <div class="bg-egg"></div>
+      <div class="text-center container-egg">
+        <h2>Transform your brand</h2>
         <p>
-          Great design makes your memorable. we beluver artwok at underscores your brand messages and captures potential client´s attention
+          we are a full-service create agency specializig in helping brands grow
+          fast
         </p>
+        <p>
+          engage your clients throught compelling visuals that do most of the
+          marketing of you
+        </p>
+        <a href="#" class="link">Learn more</a>
       </div>
     </section>
   </body>
