--- a/Semana-4/Challenges/Spotify/Index.html
+++ b/Semana-4/Challenges/Spotify/Index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <main class="text-white">
-      <aside class="sidebar bg-[#212121] overfow:hidden hover:overflow-auto pb-20">
+      <aside class="sidebar bg-[#212121] overflow-hidden hover:overflow-auto pb-20">
         <div class="p-10">
           <div>
             <img src="./assets/images/logo.svg" alt="" />
@@ -124,9 +124,211 @@
           </ul>
         </div>
       </aside>
-      <section class="principal bg-[#121212]">content principal</section>
-      <section class="extra bg-[#212121]">extra</section>
-      <section class="player bg-[#212121]/70">player</section>
+      <section class="principal bg-[#121212] p-10">
+        <div class="px-4">
+          <div class="flex justify-between">
+            <div class="flex gap-5 items-center">
+              <button class="bg-[#212121] py-5 px-6 rounded-md">
+                <img src="./assets/icons/arrow-left.svg" alt="" />
+              </button>
+              <a href="">
+                <span class="font-thin text-[#ADADAD]">Home</span>
+              </a>
+              <span>
+                <img src="./assets/icons/arrow-right.svg" alt="" />
+              </span>
+              <a href="">Popular Artist</a>
+            </div>
+            <div class="flex gap-5 items-center">
+              <div class="flex gap-3 bg-[#212121] rounded-[13px] px-4 w-[318px] h-[50px] py-3">
+                <img src="./assets/icons/search-white.svg" alt="" />
+                <input
+                  type="text"
+                  placeholder="Search music, artist, albums..."
+                  class="bg-transparent outline-none w-full"/>
+              </div>
+              <div>
+                <button>
+                  <img src="./assets/icons/notification.svg" alt="" />
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="relative p-4 mt-10">
+          <div class="bg-[url('./assets/images/bg-principal.png')] bg-no-repeat bg-center bg-cover h-[296px] overflow-hidden rounded-2xl">
+            <div class="relative h-full inset-0 bg-black/85 flex justify-between items-center">
+              <div class="py-6 ps-16">
+                <p class="flex gap-3 items-center text-[#BABCBE]">
+                  <img src="./assets/icons/verified.svg" alt="" />
+                  <span>Verified Artist</span>
+                </p>
+                <h1 class="text-[50px] font-bold my-2">Ed Sheeran</h1>
+                <p class="flex items-center gap-3">
+                  <img src="./assets/icons/icon_headphones_.svg" alt="" />
+                  <span class="font-semibold">82,736,050</span>
+                  <span class="text-[#ADADAD]">monthly listeners</span>
+                </p>
+                <div class="mt-5 flex gap-5">
+                  <button class="bg-[#1DB954] py-3 px-5 rounded-full font-semibold">
+                    PLAY
+                  </button>
+                  <button class="bg-transparent border border-2 flex items-center gap-2 py-3 px-5 rounded-full font-semibold">
+                    <img src="./assets/icons/check.svg" alt="" />
+                    <span>FOLLOWING</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="w-full">
+            <img
+              width="433"
+              height="363"
+              class="absolute -top-[51px] right-[50px] right-0"
+              src="./assets/images/ed-sheeran.png"
+              alt=""/>
+          </div>
+        </div>
+      </section>
+
+      <section class="extra bg-[#212121] p-6 overflow-auto">
+        <div class="flex gap-5">
+          <img 
+          src="./assets/images/profile.png" 
+          width="51" 
+          class="rounded-full"
+          alt=""/>
+          <div>
+            <h4 class="font-bold text-base">Efrain Quispe</h4>
+            <div class="flex gap-2 items-center mt-2">
+              <p class="text-xs font-thin">Premium</p>
+              <img src="./assets/icons/point.svg" alt="">
+              <img src="./assets/icons/star.svg" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="flex justify-between mt-10">
+          <p class="font-semibold">Fans Also Like</p>
+          <a class="text-[#1db954]" href="">Se All</a>
+        </div>
+        <div class="mt-10">
+          <div class="relative">
+            <img src="./assets/images/james.png" class="rounded-xl" alt="">
+            <div class="absolute bottom-0 backdrop-blur-xl rounded-b-xl bg-gray-black/40 w-full px-4 py-3" >
+              <p class="text-sm font-semibold">James Arthur</p>
+              <p class="text-xs font-thin mt-1">Artist</p>
+            </div>
+          </div>
+          <div class="flex gap-3 justify-center mt-5">
+            <span class="h-[8px] w-[8px] cursor-pointer rounded-full bg-white"></span>
+            <span class="h-[8px] w-[8px] cursor-pointer rounded-full bg-[#7A7A7A]"></span>
+            <span class="h-[8px] w-[8px] cursor-pointer rounded-full bg-[#7A7A7A]"></span>
+            <span class="h-[8px] w-[8px] cursor-pointer rounded-full bg-[#7A7A7A]"></span>
+          </div>
+          <div class="flex justify-between mt-10">
+            <p class="font-semibold">Recent Played</p>
+            <a class="text-[#1db954]" href="">Se All</a>
+          </div>
+          <div class="mt-3 flex flex-col gap-5">
+            <div class="flex items-center gap-3">
+              <img width="44" src="./assets/images/music.svg" alt="">
+              <div class="flex-[1.3]">
+                <p class="text-sm">Perfect</p>
+                <P class="text-xs text-[#adadad] font-thin">Ed Sheran</P>
+              </div>
+                <P class="text-xs flex-1 w-[60px]">2min ago</P>
+            </div>
+            <div class="flex items-center gap-3">
+              <img width="44" src="./assets/images/roman.png" alt="">
+              <div class="flex-[1.3]">
+                <p class="text-sm">Roman Picias</p>
+                <P class="text-xs text-[#adadad]">Hanin Dny. Ah</P>
+              </div>
+                <P class="text-xs flex-1 w-[60px]">2min ago</P>
+            </div>
+            <div class="flex items-center gap-3">
+              <img width="44" src="./assets/images/shiver.png" alt="">
+              <div class="flex-[1.3]">
+                <p class="text-sm">Shiver</p>
+                <P class="text-xs text-[#adadad]">Ed Sheran</P>
+              </div>
+                <P class="text-xs flex-1 w-[60px]">8min ago</P>
+            </div>
+            <div class="flex items-center gap-3">
+              <img width="44" src="./assets/images/feel.png" alt="">
+              <div class="flex-[1.3]">
+                <p class="text-sm">Fell Shomething</p>
+                <P class="text-xs text-[#adadad]">Jaymes Young</P>
+              </div>
+                <P class="text-xs flex-1 w-[60px]">2min ago</P>
+            </div>
+            <div class="flex items-center gap-3">
+              <img width="44" src="./assets/images/music.svg" alt="">
+              <div class="flex-[1.3]">
+                <p class="text-sm">Saphe of you</p>
+                <P class="text-xs text-[#adadad]">Ed Sheran</P>
+              </div>
+                <P class="text-xs flex-1 w-[60px]">2min ago</P>
+            </div>
+            <div class="flex items-center gap-3">
+              <img width="44" src="./assets/images/shiver.png" alt="">
+              <div class="flex-[1.3]">
+                <p class="text-sm">Bad Habits</p>
+                <P class="text-xs text-[#adadad]">Ed Sheran</P>
+              </div>
+                <P class="text-xs flex-1 w-[60px]">14hrs ago</P>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="player backdrop-blur-md bg-white/10 " >
+      <div class="w-full bg-[#4C4C4C] rounded-full h-[0.5vh] ">
+        <div class="bg-white h-1.5 rounded-full" style="width: 45%"></div>
+      </div>
+        <div class="h-[9.5vh] bg-[url('./assets/images/bg-play.png')] flex p-5 justify-between">
+          <div class="flex items-center gap-5">
+            <img src="./assets/images/music.svg" alt="" class="object-cover">
+            <div>
+              <h3 class="text-md">Shape of you</h3>
+              <p class="text-sm font-thin text-[#adadad]">Ed Sheeran</p>
+            </div>
+            <button>
+              <img width="20" src="./assets/icons/heart-player.svg" alt="">
+            </button>
+            
+          </div>
+          <div class="flex gap-5 items-center">
+            <button>
+              <img src="./assets/icons/shuffle.svg" alt="">
+            </button>
+            <div class="flex gap-5 items-center">
+              <button class="flex gap-5 items-center">
+                <img src="/assets/icons/back.svg" alt="">
+              </button>
+              <button class="bg-[#D9D9D9] p-2 rounded-full" >
+            <img src="/assets/icons/pause.svg"  alt="">
+              </button>
+            <img src="/assets/icons/back.svg" class="rotate-180">
+          </div>
+          <img src="./assets/icons/repeatemusic.svg" alt="">
+          </div>
+          <div class="flex gap-5 items-center">
+            <p class="text-[#bebebe]"> 1:45 / 4:42</p>
+            <div class="flex items-center gap-3">
+              <img src="./assets/icons/volumehigh.svg" alt="">
+              <div class="w-[99px] bg-[#4C4C4C] rounded-full h-[4px] ">
+                <div class="bg-white h-1.5 rounded-full" style="width: 85%">
+                </div>
+              </div>
+            </div>
+            <button>
+              <img src="./assets/icons/comment.svg" alt="">
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
