--- a/Semana-4/Challenges/Spotify/Index.html
+++ b/Semana-4/Challenges/Spotify/Index.html
@@ -124,7 +124,7 @@
           </ul>
         </div>
       </aside>
-      <section class="principal bg-[#121212] p-10">
+      <section class="principal bg-[#121212] p-10 overflow-auto">
         <div class="px-4">
           <div class="flex justify-between">
             <div class="flex gap-5 items-center">
@@ -181,6 +181,191 @@
               </div>
             </div>
           </div>
+          <div>
+          <div class="flex justify-between">
+            <p class="font-semibold">Popular</p>
+            <a class="text-[#1db954]" href="">Se All</a>
+          </div>
+
+          <div class="mt-10">
+            <div class="flex items-center justify-between ps-2 py-4 hover:bg-gradient-to-r hover:from-[#2d2d2d]">
+              <div class="flex-[0.2]">
+                <span class="font-bold">1</span>
+              </div>
+              <div class="flex-[3]">
+                <div class="flex items-center gap-3 h-full">
+                  <img width="54" height="54" src="./assets/images/shiver.png" alt="">
+                  <span class="font-semibold">Shiver</span>
+                </div>
+              </div>
+              <div class="flex-1">
+                <div class="flex gap-3 items-center">
+                  <img src="./assets/icons/icon_headphones_.svg" alt="">
+               <span>460,228,511</span>
+               </div>   
+              </div>
+              <div class="flex-1">
+                <div class="flex gap-3 items-center">
+                  <img src="./assets/icons/clock.svg" alt="">
+                  <span>3:27 </span>
+                </div>
+              </div>
+              <div class="flex-1">
+                <button>
+                <img src="./assets/icons/heart-player.svg" alt="">
+              </button>  
+              </div>
+              <div>
+                <button>
+                  <img src="./assets/icons/options.svg" alt="">
+                </button> 
+              </div>
+            </div>
+           <hr class="border-[#4c4c4c] h-[0.5px]"/>
+
+           <div class="flex items-center justify-between ps-2 py-4 hover:bg-gradient-to-r hover:from-[#2d2d2d]">
+            <div class="flex-[0.2]">
+              <span class="font-bold">2</span>
+            </div>
+            <div class="flex-[3]">
+              <div class="flex items-center gap-3 h-full">
+                <img width="54" height="54" src="./assets/images/ed.png" alt="">
+                <span class="font-semibold">Pefect</span>
+              </div>
+            </div>
+            <div class="flex-1">
+              <div class="flex gap-3 items-center">
+                <img src="./assets/icons/icon_headphones_.svg" alt="">
+             <span>460,228,511</span>
+             </div>   
+            </div>
+            <div class="flex-1">
+              <div class="flex gap-3 items-center">
+                <img src="./assets/icons/clock.svg" alt="">
+                <span>3:27 </span>
+              </div>
+            </div>
+            <div class="flex-1">
+              <button>
+              <img src="./assets/icons/heart-player.svg" alt="">
+            </button>  
+            </div>
+            <div>
+              <button>
+                <img src="./assets/icons/options.svg" alt="">
+              </button> 
+            </div>
+          </div>
+         <hr class="border-[#4c4c4c] h-[0.5px]"/>
+
+         <div class="flex items-center justify-between ps-2 py-4 hover:bg-gradient-to-r hover:from-[#2d2d2d]">
+          <div class="flex-[0.2]">
+            <span class="font-bold">3</span>
+          </div>
+          <div class="flex-[3]">
+            <div class="flex items-center gap-3 h-full">
+              <img width="54" height="54" src="./assets/images/shiver.png" alt="">
+              <span class="font-semibold">Bad Habits</span>
+            </div>
+          </div>
+          <div class="flex-1">
+            <div class="flex gap-3 items-center">
+              <img src="./assets/icons/icon_headphones_.svg" alt="">
+           <span>460,228,511</span>
+           </div>   
+          </div>
+          <div class="flex-1">
+            <div class="flex gap-3 items-center">
+              <img src="./assets/icons/clock.svg" alt="">
+              <span>3:27 </span>
+            </div>
+          </div>
+          <div class="flex-1">
+            <button>
+            <img src="./assets/icons/heart-player.svg" alt="">
+          </button>  
+          </div>
+          <div>
+            <button>
+              <img src="./assets/icons/options.svg" alt="">
+            </button> 
+          </div>
+        </div>
+       <hr class="border-[#4c4c4c] h-[0.5px]"/>
+
+       <div class="flex items-center justify-between ps-2 py-4 hover:bg-gradient-to-r hover:from-[#2d2d2d]">
+        <div class="flex-[0.2]">
+          <span class="font-bold">4</span>
+        </div>
+        <div class="flex-[3]">
+          <div class="flex items-center gap-3 h-full">
+            <img width="54" height="54" src="./assets/images/peru.png" alt="">
+            <span class="font-semibold">Shape of you</span>
+          </div>
+        </div>
+        <div class="flex-1">
+          <div class="flex gap-3 items-center">
+            <img src="./assets/icons/icon_headphones_.svg" alt="">
+         <span>460,228,511</span>
+         </div>   
+        </div>
+        <div class="flex-1">
+          <div class="flex gap-3 items-center">
+            <img src="./assets/icons/clock.svg" alt="">
+            <span>3:27 </span>
+          </div>
+        </div>
+        <div class="flex-1">
+          <button>
+          <img src="./assets/icons/heart-player.svg" alt="">
+        </button>  
+        </div>
+        <div>
+          <button>
+            <img src="./assets/icons/options.svg" alt="">
+          </button> 
+        </div>
+      </div>
+     <hr class="border-[#4c4c4c] h-[0.5px]"/>
+
+     <div class="flex items-center justify-between ps-2 py-4 hover:bg-gradient-to-r hover:from-[#2d2d2d]">
+      <div class="flex-[0.2]">
+        <span class="font-bold">5</span>
+      </div>
+      <div class="flex-[3]">
+        <div class="flex items-center gap-3 h-full">
+          <img width="54" height="54" src="./assets/images/shiver.png" alt="">
+          <span class="font-semibold">I before you</span>
+        </div>
+      </div>
+      <div class="flex-1">
+        <div class="flex gap-3 items-center">
+          <img src="./assets/icons/icon_headphones_.svg" alt="">
+       <span>460,228,511</span>
+       </div>   
+      </div>
+      <div class="flex-1">
+        <div class="flex gap-3 items-center">
+          <img src="./assets/icons/clock.svg" alt="">
+          <span>3:27 </span>
+        </div>
+      </div>
+      <div class="flex-1">
+        <button>
+        <img src="./assets/icons/heart-player.svg" alt="">
+      </button>  
+      </div>
+      <div>
+        <button>
+          <img src="./assets/icons/options.svg" alt="">
+        </button> 
+      </div>
+    </div>
+   <hr class="border-[#4c4c4c] h-[0.5px]"/>
+
+          </div>
+          </div>
+
           <div class="w-full">
             <img
               width="433"
@@ -188,6 +373,43 @@
               class="absolute -top-[51px] right-[50px] right-0"
               src="./assets/images/ed-sheeran.png"
               alt=""/>
+          </div>
+        </div>
+        <div>
+          <div>
+            <p class="font-semibold">Popular Release</p>
+          </div>
+          <div class="grid grid-cols-4 md:grid-cols-9 xl:grid-cols-6 gap-5 mt-5">
+            <Div class="w-[120px]">
+              <a href="">
+                <img class="w-full" src="./assets/images/peru.png" alt=""/>
+              </a>
+            </Div>
+            <Div class="w-[120px]">
+              <a href="">
+                <img class="w-full" src="./assets/images/ed.png" alt=""/>
+              </a>
+            </Div>
+            <Div class="w-[120px]">
+              <a href="">
+                <img class="w-full" src="./assets/images/peru.png" alt=""/>
+              </a>
+            </Div>
+            <Div class="w-[120px]">
+              <a href="">
+                <img class="w-full" src="./assets/images/shiver.png" alt=""/>
+              </a>
+            </Div>
+            <Div class="w-[120px]">
+              <a href="">
+                <img class="w-full" src="./assets/images/music.svg" alt=""/>
+              </a>
+            </Div>
+            <Div class="w-[120px]">
+              <a href="">
+                <img class="w-full" src="./assets/images/peru.png" alt=""/>
+              </a>
+            </Div>
           </div>
         </div>
       </section>
