add icons spotify

--- a/Semana-4/Challenges/Spotify/Index.html
+++ b/Semana-4/Challenges/Spotify/Index.html
@@ -263,7 +263,7 @@
             <span class="font-bold">3</span>
           </div>
           <div class="flex-[3]">
-            <div class="flex items-center gap-3 h-full">
+            <div class="flex items-center gap-4 h-full">
               <img width="54" height="54" src="./assets/images/shiver.png" alt="">
               <span class="font-semibold">Bad Habits</span>
             </div>
@@ -379,7 +379,7 @@
           <div>
             <p class="font-semibold">Popular Release</p>
           </div>
-          <div class="grid grid-cols-4 md:grid-cols-9 xl:grid-cols-6 gap-5 mt-5">
+          <div class="grid grid-cols-4 md:grid-cols-9 xl:grid-cols-6  gap-10 mt-5">
             <Div class="w-[120px]">
               <a href="">
                 <img class="w-full" src="./assets/images/peru.png" alt=""/>
@@ -408,6 +408,31 @@
             <Div class="w-[120px]">
               <a href="">
                 <img class="w-full" src="./assets/images/peru.png" alt=""/>
+              </a>
+            </Div>
+            <Div class="w-[120px]">
+              <a href="">
+                <img class="w-full" src="./assets/images/peru.png" alt=""/>
+              </a>
+            </Div>
+            <Div class="w-[120px]">
+              <a href="">
+                <img class="w-full" src="./assets/images/ed.png" alt=""/>
+              </a>
+            </Div>
+            <Div class="w-[120px]">
+              <a href="">
+                <img class="w-full" src="./assets/images/peru.png" alt=""/>
+              </a>
+            </Div>
+            <Div class="w-[120px]">
+              <a href="">
+                <img class="w-full" src="./assets/images/shiver.png" alt=""/>
+              </a>
+            </Div>
+            <Div class="w-[120px]">
+              <a href="">
+                <img class="w-full" src="./assets/images/music.svg" alt=""/>
               </a>
             </Div>
           </div>
@@ -505,7 +530,7 @@
         </div>
       </section>
 
-      <section class="player backdrop-blur-md bg-white/10 " >
+      <section class="player  backdrop-blur-md bg-white/10 " >
       <div class="w-full bg-[#4C4C4C] rounded-full h-[0.5vh] ">
         <div class="bg-white h-1.5 rounded-full" style="width: 45%"></div>
       </div>
