--- a/Semana-4/Challenges/Spotify/Index.html
+++ b/Semana-4/Challenges/Spotify/Index.html
@@ -550,15 +550,17 @@
             <button>
               <img src="./assets/icons/shuffle.svg" alt="">
             </button>
-            <div class="flex gap-5 items-center">
-              <button class="flex gap-5 items-center">
+            <div class="flex gap-3 items-center">
+              <button  >
                 <img src="/assets/icons/back.svg" alt="">
               </button>
               <button class="bg-[#D9D9D9] p-2 rounded-full" >
             <img src="/assets/icons/pause.svg"  alt="">
               </button>
-            <img src="/assets/icons/back.svg" class="rotate-180">
-          </div>
+            <button>
+              <img src="./assets/icons/back.svg" class="rotate-180" alt="" />
+            </button>
+            </div>
           <img src="./assets/icons/repeatemusic.svg" alt="">
           </div>
           <div class="flex gap-5 items-center">
