--- a/Semana-8/index.html
+++ b/Semana-8/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>to do list</title>
+    <title>Document</title>
     <!-- tailwind -->
     <script src="https://cdn.tailwindcss.com/3.4.1"></script>
     <script defer src="./js/app.js"></script>
@@ -17,20 +17,59 @@
           class="w-full border py-2 px-4 rounded-l-md outline-none"
           placeholder="Escribe el titulo de tu tarea "
         />
-        <button class="bg-gray-400 px-4 rounded-r-md">Crear</button>
+        <button class="bg-green-400 px-4 rounded-r-md">Crear</button>
       </form>
       <span id="error" class="text-xs text-red-500 mt-1"></span>
-      <section id="container-tasks" class="mt-10">
-        <div class="flex justify-between px-4 py-3 bg-white rounded-md border">
-          <p>Tarea 1</p>
-          <div class="flex gap-5">
-            <button>✅</button>
-            <button>✏️</button>
-            <button>🗑️</button>
+      <section id="container-tasks" class="mt-10"></section>
+    </main>
+    <div id="modal" class="relative z-50 w-full">
+      <div class="fixed inset-0 bg-black/30"></div>
+      <div
+        class="fixed inset-0 w-full p-6 flex justify-center items-center rounded-md"
+      >
+        <div class="bg-white p-5 mx-auto w-full max-w-md border rounded-md">
+          <div id="modal-title" class="mb-5">
+            <h2 class="text-2xl font-semibold">Editar tarea</h2>
+          </div>
+          <div id="modal-content">
+            <form action="">
+              <input
+                id="input-edit-task"
+                type="text"
+                placeholder="Editar tarea"
+                class="w-full border py-2 px-4 rounded-md outline-none"
+              />
+              <div class="mt-5">
+                <div class="flex flex-col gap-5 mt-4">
+                  <div>
+                    <input id="input-edit-create" type="radio" name="status" />
+                    Creado
+                  </div>
+                  <div>
+                    <input id="input-edit-done" type="radio" name="status" />
+                    Terminado
+                  </div>
+                </div>
+              </div>
+              <div class="mt-5 flex justify-end gap-5">
+                <button
+                  onclick="closeModal()"
+                  type="button"
+                  class="py-2 px-4 border border-red-400 rounded-md"
+                >
+                  Cerrar
+                </button>
+                <button
+                  type="submit"
+                  class="bg-green-400 py-2 px-4 rounded-md text-white"
+                >
+                  Actualizar
+                </button>
+              </div>
+            </form>
           </div>
         </div>
-      </section>
-    </main>
+      </div>
+    </div>
   </body>
 </html>
-
